--- a/app/src/main/res/layout/item_app_row.xml
+++ b/app/src/main/res/layout/item_app_row.xml
@@ -1,29 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="8dp"
     android:orientation="horizontal"
+    android:padding="12dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/iv_app_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="12dp" />
+
     <TextView
-        android:id="@+id/tv_app_label"
+        android:id="@+id/tv_app_name"
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="16sp"
         android:text="App Name" />
 
-    <EditText
-        android:id="@+id/et_minutes"
-        android:layout_width="72dp"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:hint="10" />
-
-    <ToggleButton
-        android:id="@+id/toggle_lock"
+    <Switch
+        android:id="@+id/sw_lock"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textOn="Locked"
-        android:textOff="Unlocked" />
-
+        android:layout_height="wrap_content" />
 </LinearLayout>
